# Apeczon.github.io

./: Alex_Peczon_Resume_Updated.tex  dreamville.html  index.html  pyproject.toml  requirements.txt  run.sh  test.html
app/: main.py  models.py
app/data/: projects.json
app/routes/: api.py  games.py  pages.py
assets/css/: main.css
assets/js/: main.js
images/: 54966c85-898f-476c-b755-dec75bd64c4d.avif
static/boids/: index.html  index.pck
static/css/: style.css
static/godot/: index.html  index.service.worker.js
static/images/: steam_report.html
static/js/: animations.js  boids.js  future-scene-loader.js  future-scene.js  metrics.js  tictactoe.js
templates/: index.html
