[project]
name = "portfolio-v2"
version = "1.0.0"
description = "Alex Peczon's portfolio - Litestar + native hero motion"
requires-python = ">=3.11"
dependencies = [
    "litestar[jinja]>=2.15",
    "msgspec>=0.19",
    "psutil>=6.0",
    "uvicorn>=0.34",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
